[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://gui/supply/supply_list_item.gd" id="1_rw6vl"]
[ext_resource type="LabelSettings" uid="uid://bkyixyciqmq2n" path="res://gui/res/item_label_settings.tres" id="2_3g4hl"]

[node name="MarginContainer" type="MarginContainer"]
offset_right = 400.0
offset_bottom = 41.0
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2
script = ExtResource("1_rw6vl")

[node name="Button" type="Button" parent="."]
layout_mode = 2
toggle_mode = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="LabelName" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Item Name"
label_settings = ExtResource("2_3g4hl")

[node name="LabelLevel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "Lv100"
label_settings = ExtResource("2_3g4hl")

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="LabelCost" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "10000c"
label_settings = ExtResource("2_3g4hl")

[node name="LabelQty" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.2
text = "x9999"
label_settings = ExtResource("2_3g4hl")
